--- a/src/app/modules/usecases/components/profile/progridposts/progridposts.component.html
+++ b/src/app/modules/usecases/components/profile/progridposts/progridposts.component.html
@@ -2,70 +2,140 @@
     <div>
         <div style="position: relative; display: flex; flex-direction: column; padding-bottom: 0px; padding-top: 0px;">
             <!-- Bucle for de la primera fila con 3 elementos -->
+
+
+            <ng-container *ngFor="let item of this.posts; index as i; count as c">
+                <ng-container *ngIf="i % 3 == 0">
+                    <div class="_ac7v _al3n">
+                        <div class="_aabd _aa8k _al3l" *ngFor="let el of this.posts | slice:0:2">
+                            <span> data {{ i }} </span>
+                        </div>
+                    </div>
+                </ng-container>
+            </ng-container>
+
+            <!--
             <div class="_ac7v _al3n">
                 <ng-container *ngIf="this.user">
-                    <ng-container *ngFor="let item of this.posts">
-                        <div class="_aabd _aa8k _al3l" (mouseover)="this.mouseInfoPost(true)" (mouseleave)="this.mouseInfoPost(false)">
-                            <a
-                                class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _a6hd"
-                                (click)="displayHorizontalWindowSwipePost(true, this.currentRoute)"
-                                role="link"
-                                tabindex="0"
-                            >
-                                <div class="_aagu">
-                                    <div class="_aagv">
-                                        <img
-                                            alt="{{item.caption}}"
-                                            class="x5yr21d xu96u03 x10l6tqk x13vifvy x87ps6o xh8yej3"
-                                            src="{{ item.imageURL }}"
-                                            style="object-fit: cover;"
-                                        />
+                    <ng-container *ngFor="let item of this.posts; index as i; count as c">
+                        <ng-container *ngIf="i <= 2; else continue">
+                            <div class="_aabd _aa8k _al3l" (mouseover)="this.mouseInfoPost(true)" (mouseleave)="this.mouseInfoPost(false)">
+                                <a
+                                    class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _a6hd"
+                                    (click)="displayHorizontalWindowSwipePost(true, this.currentRoute)"
+                                    role="link"
+                                    tabindex="0"
+                                >
+                                    <div class="_aagu">
+                                        <div class="_aagv">
+                                            <img
+                                                alt="{{item.caption}}"
+                                                class="x5yr21d xu96u03 x10l6tqk x13vifvy x87ps6o xh8yej3"
+                                                src="{{ item.imageURL }}"
+                                                style="object-fit: cover;"
+                                            />
+                                        </div>
+                        
+                                        <div class="_aagw"></div>
                                     </div>
-                    
-                                    <div class="_aagw"></div>
-                                </div>
-                                <div class="_aatp">
-                                    <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1xmf6yo x1emribx x1e56ztr x1i64zmx x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">
-                                        <svg aria-label="Clip" class="x1lliihq x1n2onr6" color="rgb(255, 255, 255)" fill="rgb(255, 255, 255)" height="18" role="img" viewBox="0 0 24 24" width="18">
-                                            <title>Clip</title>
-                                            <path
-                                                d="m12.823 1 2.974 5.002h-5.58l-2.65-4.971c.206-.013.419-.022.642-.027L8.55 1Zm2.327 0h.298c3.06 0 4.468.754 5.64 1.887a6.007 6.007 0 0 1 1.596 2.82l.07.295h-4.629L15.15 1Zm-9.667.377L7.95 6.002H1.244a6.01 6.01 0 0 1 3.942-4.53Zm9.735 12.834-4.545-2.624a.909.909 0 0 0-1.356.668l-.008.12v5.248a.91.91 0 0 0 1.255.84l.109-.053 4.545-2.624a.909.909 0 0 0 .1-1.507l-.1-.068-4.545-2.624Zm-14.2-6.209h21.964l.015.36.003.189v6.899c0 3.061-.755 4.469-1.888 5.64-1.151 1.114-2.5 1.856-5.33 1.909l-.334.003H8.551c-3.06 0-4.467-.755-5.64-1.889-1.114-1.15-1.854-2.498-1.908-5.33L1 15.45V8.551l.003-.189Z"
-                                                fill-rule="evenodd"
-                                            ></path>
-                                        </svg>
+                                    <div class="_aatp">
+                                        <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1xmf6yo x1emribx x1e56ztr x1i64zmx x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">
+                                            <svg aria-label="Clip" class="x1lliihq x1n2onr6" color="rgb(255, 255, 255)" fill="rgb(255, 255, 255)" height="18" role="img" viewBox="0 0 24 24" width="18">
+                                                <title>Clip</title>
+                                                <path
+                                                    d="m12.823 1 2.974 5.002h-5.58l-2.65-4.971c.206-.013.419-.022.642-.027L8.55 1Zm2.327 0h.298c3.06 0 4.468.754 5.64 1.887a6.007 6.007 0 0 1 1.596 2.82l.07.295h-4.629L15.15 1Zm-9.667.377L7.95 6.002H1.244a6.01 6.01 0 0 1 3.942-4.53Zm9.735 12.834-4.545-2.624a.909.909 0 0 0-1.356.668l-.008.12v5.248a.91.91 0 0 0 1.255.84l.109-.053 4.545-2.624a.909.909 0 0 0 .1-1.507l-.1-.068-4.545-2.624Zm-14.2-6.209h21.964l.015.36.003.189v6.899c0 3.061-.755 4.469-1.888 5.64-1.151 1.114-2.5 1.856-5.33 1.909l-.334.003H8.551c-3.06 0-4.467-.755-5.64-1.889-1.114-1.15-1.854-2.498-1.908-5.33L1 15.45V8.551l.003-.189Z"
+                                                    fill-rule="evenodd"
+                                                ></path>
+                                            </svg>
+                                        </div>
                                     </div>
-                                </div>
-        
-                                <ng-container *ngIf="this.infoPost">
-                                    <div class="_ac2d" style="background: rgba(0, 0, 0, 0.3);">
-                                        <ul class="_abpo">
-                                            <li class="_abpm">
-                                                <span class="x1lliihq x1plvlek xryxfnj x1n2onr6 x193iq5w xeuugli x1fj9vlw x13faqbe x1vvkbs x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x x1i0vuye xl565be x1xlr1w8 x9bdzbf x10wh9bi x1wdrske x8viiok x18hxmgj" style="line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height:20px;">
-                                                    <span>{{ item.likes }}&nbsp;mil</span>
-                                                </span>
-                                                <span class="_abpn _9-j_"></span>
-                                            </li>
-                                            <li class="_abpm">
-                                                <span class="x1lliihq x1plvlek xryxfnj x1n2onr6 x193iq5w xeuugli x1fj9vlw x13faqbe x1vvkbs x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x x1i0vuye xl565be x1xlr1w8 x9bdzbf x10wh9bi x1wdrske x8viiok x18hxmgj" style="line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height:20px;">
-                                                    <span>109</span>
-                                                </span>
-                                                <span class="_abpn _9-k0"></span>
-                                            </li>
-                                        </ul>
+            
+                                    <ng-container *ngIf="this.infoPost">
+                                        <div class="_ac2d" style="background: rgba(0, 0, 0, 0.3);">
+                                            <ul class="_abpo">
+                                                <li class="_abpm">
+                                                    <span class="x1lliihq x1plvlek xryxfnj x1n2onr6 x193iq5w xeuugli x1fj9vlw x13faqbe x1vvkbs x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x x1i0vuye xl565be x1xlr1w8 x9bdzbf x10wh9bi x1wdrske x8viiok x18hxmgj" style="line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height:20px;">
+                                                        <span>{{ item.likes }}&nbsp;mil</span>
+                                                    </span>
+                                                    <span class="_abpn _9-j_"></span>
+                                                </li>
+                                                <li class="_abpm">
+                                                    <span class="x1lliihq x1plvlek xryxfnj x1n2onr6 x193iq5w xeuugli x1fj9vlw x13faqbe x1vvkbs x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x x1i0vuye xl565be x1xlr1w8 x9bdzbf x10wh9bi x1wdrske x8viiok x18hxmgj" style="line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height:20px;">
+                                                        <span>109</span>
+                                                    </span>
+                                                    <span class="_abpn _9-k0"></span>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </ng-container>
+                                </a>
+                            </div>
+                        </ng-container>
+                        <ng-template #continue>
+                            <div class="_aabd _aa8k _al3l" (mouseover)="this.mouseInfoPost(true)" (mouseleave)="this.mouseInfoPost(false)">
+                                <a
+                                    class="x1i10hfl xjbqb8w x6umtig x1b1mbwd xaqea5y xav7gou x9f619 x1ypdohk xt0psk2 xe8uvvx xdj266r x11i5rnm xat24cr x1mh8g0r xexx8yu x4uap5 x18d9i69 xkhd6sd x16tdsg8 x1hl2dhg xggy1nq x1a2a7pz _a6hd"
+                                    (click)="displayHorizontalWindowSwipePost(true, this.currentRoute)"
+                                    role="link"
+                                    tabindex="0"
+                                >
+                                    <div class="_aagu">
+                                        <div class="_aagv">
+                                            <img
+                                                alt="{{item.caption}}"
+                                                class="x5yr21d xu96u03 x10l6tqk x13vifvy x87ps6o xh8yej3"
+                                                src="{{ item.imageURL }}"
+                                                style="object-fit: cover;"
+                                            />
+                                        </div>
+                        
+                                        <div class="_aagw"></div>
                                     </div>
-                                </ng-container>
-                            </a>
-                        </div>
+                                    <div class="_aatp">
+                                        <div class="x9f619 xjbqb8w x78zum5 x168nmei x13lgxp2 x5pf9jr xo71vjh x1xmf6yo x1emribx x1e56ztr x1i64zmx x1n2onr6 x1plvlek xryxfnj x1c4vz4f x2lah0s xdt5ytf xqjyukv x1qjc9v5 x1oa3qoh x1nhvcw1">
+                                            <svg aria-label="Clip" class="x1lliihq x1n2onr6" color="rgb(255, 255, 255)" fill="rgb(255, 255, 255)" height="18" role="img" viewBox="0 0 24 24" width="18">
+                                                <title>Clip</title>
+                                                <path
+                                                    d="m12.823 1 2.974 5.002h-5.58l-2.65-4.971c.206-.013.419-.022.642-.027L8.55 1Zm2.327 0h.298c3.06 0 4.468.754 5.64 1.887a6.007 6.007 0 0 1 1.596 2.82l.07.295h-4.629L15.15 1Zm-9.667.377L7.95 6.002H1.244a6.01 6.01 0 0 1 3.942-4.53Zm9.735 12.834-4.545-2.624a.909.909 0 0 0-1.356.668l-.008.12v5.248a.91.91 0 0 0 1.255.84l.109-.053 4.545-2.624a.909.909 0 0 0 .1-1.507l-.1-.068-4.545-2.624Zm-14.2-6.209h21.964l.015.36.003.189v6.899c0 3.061-.755 4.469-1.888 5.64-1.151 1.114-2.5 1.856-5.33 1.909l-.334.003H8.551c-3.06 0-4.467-.755-5.64-1.889-1.114-1.15-1.854-2.498-1.908-5.33L1 15.45V8.551l.003-.189Z"
+                                                    fill-rule="evenodd"
+                                                ></path>
+                                            </svg>
+                                        </div>
+                                    </div>
+            
+                                    <ng-container *ngIf="this.infoPost">
+                                        <div class="_ac2d" style="background: rgba(0, 0, 0, 0.3);">
+                                            <ul class="_abpo">
+                                                <li class="_abpm">
+                                                    <span class="x1lliihq x1plvlek xryxfnj x1n2onr6 x193iq5w xeuugli x1fj9vlw x13faqbe x1vvkbs x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x x1i0vuye xl565be x1xlr1w8 x9bdzbf x10wh9bi x1wdrske x8viiok x18hxmgj" style="line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height:20px;">
+                                                        <span>{{ item.likes }}&nbsp;mil</span>
+                                                    </span>
+                                                    <span class="_abpn _9-j_"></span>
+                                                </li>
+                                                <li class="_abpm">
+                                                    <span class="x1lliihq x1plvlek xryxfnj x1n2onr6 x193iq5w xeuugli x1fj9vlw x13faqbe x1vvkbs x1s928wv xhkezso x1gmr53x x1cpjm7i x1fgarty x1943h6x x1i0vuye xl565be x1xlr1w8 x9bdzbf x10wh9bi x1wdrske x8viiok x18hxmgj" style="line-height: var(--base-line-clamp-line-height); --base-line-clamp-line-height:20px;">
+                                                        <span>109</span>
+                                                    </span>
+                                                    <span class="_abpn _9-k0"></span>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </ng-container>
+                                </a>
+                            </div>
+                        </ng-template>
+                        
                     </ng-container>
                 </ng-container>
             </div>
-           
+           -->
 
 
 
 
 
 
+            <!-- Bucle for de la Primera fila con 3 elementos -->
             <!--
             <div class="_ac7v _al3n">
                 <div class="_aabd _aa8k _al3l" (mouseover)="this.mouseInfoPost(true)" (mouseleave)="this.mouseInfoPost(false)">
@@ -171,10 +241,10 @@
                 </div>
             </div>
             -->
-
             <!-- / Bucle for de la primera fila con 3 elementos -->
 
-            <!-- Bucle for de la segunda fila con 3 elementos -->
+
+            <!-- Bucle for de la Segunda fila con 3 elementos -->
             <!--
             <div class="_ac7v _al3n">
                 <div class="_aabd _aa8k _al3l">
